fixed issue with horizontal scrollbar

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -135,14 +135,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Shadows Into Light', cursive;
+  font-family: "Shadows Into Light", cursive;
 }
 h1 {
   font-size: 4rem;
@@ -200,7 +200,12 @@ p {
 }
 @media ( max-width: 900px ) {
   .home-top header nav {
-    padding: 3% 5% 0 0;
+    padding: 3% 0 0 0;
+  }
+}
+@media ( max-width: 550px ) {
+  .home-top header nav {
+    width: 100%;
   }
 }
 .home-top header nav a {
@@ -219,6 +224,11 @@ p {
   align-items: center;
   padding-top: 13rem;
 }
+@media ( max-width: 550px ) {
+  .home-top .home-top-text {
+    padding-top: 5rem;
+  }
+}
 .home-top .home-top-text h2 {
   font-size: 6.5rem;
   padding-bottom: 2rem;
@@ -235,7 +245,7 @@ p {
 }
 @media ( max-width: 550px ) {
   .home-top .home-top-text p {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 }
 .home-top .home-top-text .top-btns {
@@ -259,6 +269,25 @@ p {
 .home-top .home-top-text .top-btns .btn-profile:hover {
   background-color: white;
 }
+@media ( max-width: 550px ) {
+  .home-top .home-top-text .top-btns .btn-profile {
+    background-color: whitesmoke;
+    color: black;
+    margin: 8px 0;
+    cursor: pointer;
+    padding: 10px 5%;
+    text-align: center;
+    text-decoration: none;
+    width: 50%;
+    font-size: 1.6rem;
+    border-radius: 15px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    margin-right: 2rem;
+  }
+  .home-top .home-top-text .top-btns .btn-profile:hover {
+    background-color: white;
+  }
+}
 .home-top .home-top-text .top-btns .btn-guide {
   background-color: #fc0;
   color: black;
@@ -276,8 +305,32 @@ p {
 .home-top .home-top-text .top-btns .btn-guide:hover {
   background-color: white;
 }
+@media ( max-width: 550px ) {
+  .home-top .home-top-text .top-btns .btn-guide {
+    background-color: #fc0;
+    color: black;
+    margin: 8px 0;
+    cursor: pointer;
+    padding: 10px 5%;
+    text-align: center;
+    text-decoration: none;
+    width: 50%;
+    font-size: 1.6rem;
+    border-radius: 15px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    margin-left: 2rem;
+  }
+  .home-top .home-top-text .top-btns .btn-guide:hover {
+    background-color: white;
+  }
+}
 .main-content {
   margin: 10%;
+}
+@media ( max-width: 550px ) {
+  .main-content {
+    margin: 0;
+  }
 }
 .main-content h2 {
   font-size: 4rem;
@@ -287,7 +340,7 @@ p {
 }
 @media ( max-width: 550px ) {
   .main-content h2 {
-    padding: 2rem 2rem;
+    padding: 6rem 2rem;
   }
 }
 .profiles-grid {
@@ -314,9 +367,9 @@ p {
 }
 @media ( max-width: 900px ) {
   .profiles-grid .profile {
-    width: 70%;
+    width: 80%;
     display: flex;
-    padding-top: 3rem;
+    padding: 3rem;
   }
 }
 .profiles-grid .profile img {
@@ -365,6 +418,11 @@ p {
   align-items: flex-end;
   padding-right: 10rem;
 }
+@media ( max-width: 550px ) {
+  .home-bottom {
+    padding-right: 0;
+  }
+}
 .home-bottom .home-bottom-text {
   width: 25%;
   background-color: whitesmoke;
@@ -384,6 +442,7 @@ p {
 @media ( max-width: 550px ) {
   .home-bottom .home-bottom-text {
     width: 60%;
+    align-self: center;
   }
 }
 .home-bottom .home-bottom-text h2 {
