--- a/LESS/global.less
+++ b/LESS/global.less
@@ -7,12 +7,17 @@ html {
   scroll-behavior: smooth;
 }
 
-html, body {
-  font-family: 'Roboto', sans-serif;
+html,
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Shadows Into Light', cursive;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Shadows Into Light", cursive;
 }
 
 h1 {
