--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -1,6 +1,10 @@
 .main-content {
   margin: 10%;
 
+  @media @mobile {
+    margin: 0;
+  }
+
   h2 {
     font-size: 4rem;
     padding: 5rem 0 5rem 0;
@@ -8,7 +12,7 @@
     background-color: @neutral;
 
     @media @mobile {
-      padding: 2rem 2rem;
+      padding: 6rem 2rem;
     }
   }
 }
@@ -35,9 +39,9 @@
     position: relative;
 
     @media @tablet {
-      width: 70%;
+      width: 80%;
       display: flex;
-      padding-top: 3rem;
+      padding: 3rem;
     }
 
     img {
@@ -79,6 +83,10 @@
   align-items: flex-end;
   padding-right: 10rem;
 
+  @media @mobile {
+    padding-right: 0;
+  }
+
   .home-bottom-text {
     width: 25%;
     background-color: @neutral;
@@ -96,6 +104,7 @@
 
     @media @mobile {
       width: 60%;
+      align-self: center;
     }
 
     h2 {
